--- a/partials/footer.html
+++ b/partials/footer.html
@@ -21,11 +21,11 @@
     <div>
       <p class="footer-label">Paginas</p>
       <nav class="footer-links" aria-label="Enlaces del footer">
-        <a href="index.html">Inicio</a>
-        <a href="servicios.html">Servicios</a>
-        <a href="proceso.html">Proceso</a>
-        <a href="sobre-mi.html">Sobre mi</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="/">Inicio</a>
+        <a href="/servicios">Servicios</a>
+        <a href="/proceso">Proceso</a>
+        <a href="/sobre-mi">Sobre mi</a>
+        <a href="/contacto">Contacto</a>
       </nav>
     </div>
 
